2006-10-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Préparation de la release 0.5.3.

	* ebin/exmpp.appup.in: Instructions de mise à jour depuis la version
	0.5.2.

	* src/exmpp_xml.erl (stop_parser): Avant de décharger la librairie, on
	vérifie que port_close a fonctionné (en `catch'ant l'exception). Ça
	évite de trop décrémenter le comptage de référence sur la librairie.

2006-09-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Préparation de la release 0.5.2.

	* c_src/expat_drv.c (current_tree_finished): Correction d'un autre
	leak du même type que celui du 2006-09-25.

	* ebin/exmpp.app.in: Utilisation de @VERSION@ au lieu de
	@PACKAGE_VERSION@ pour rester cohérent.

	* ebin/exmpp.appup.in: Utilisation de @VERSION@ au lieu d'une version
	en dur. Mise à jour pour prendre en compte une upgrade/downgrade entre
	la version 0.5.2 et la version 0.5.1.

2006-09-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl (reload_driver): Suppression de la fonction, on ne
	peut pas s'en servir en l'état.
	(stop_parser): Après le port_close/1, on décharge la librairie.

	* src/exmpp_factory.erl (legacy_auth_request_with_user): Nouvelle
	fonction pour préciser le nom d'utilisateur dans la requête
	d'authentification. Correction de l'exportation de la fonction.

2006-09-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Préparation de la release 0.5.1.

	* c_src/expat_drv.c: Ajout d'une commande pour retourner la revision
	du fichier.
	(expat_drv_control): Correction d'un memory leak.

	* src/exmpp_xml.erl: Ajout d'une fonction pour récupérer la revision
	du port driver `expat_drv'.

	* configure.ac, ebin/exmpp.appup, ebin/Makefile.am: Ajout du fichier
	de mise à jour.

2006-09-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.5.0.

	* configure.ac: Mise à jour de la version.

2006-09-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
